/* $Id: changelog,v 1.1291 2001-02-27 19:34:27 sandervl Exp $ */

 2001-02-27: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Ported latest wsprintf Wine functions (not much changed; only
                  to stay in sync)

 2001-02-26: Sander van Leeuwen <sandervl@xs4all.nl>
    - WINMM:    o Fixed FS corruption in RTMidi class (wrappers for RTMIDI
                  functions)

 2001-02-25: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Check executable too when searching for imported modules
                  (directly imported by PE dlls)

 2001-02-24: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Set fExitProcess flag in WinExe destructor to prevent reloading
                  dlls after loading of exe failed.

 2001-02-23: Sander van Leeuwen <sandervl@xs4all.nl>
    - GDI32:    o Removed old workaround for SetDIBitsToDevice. Incorrect for
                  new implementation of this function with StretchDIBits.
                  (fixes bitmaps in Minesweeper)
    - USER32:   o WM_SETCURSOR change; don't check WS_EX_NOPARENTNOTIFY style
                  when sending this message to the parent of a child window.
                o Redraw entire window when switching between minimized, maximized
                  and restored windows state.
                o Added missing cursor to MDI client class
                  (cursor now changes when moving cursor from mdi child to
                   client window)
    - USER32, include\win\drive.h:
                o DRIVE_GetDosCwd bugfix
                  (fixes crash in Cool Edit old-style file open dialog)

 2000-02-22: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - Win32k:   o Support for the 14062e kernels.
                o Removed the CALLTAB segment.
                o Hooked dh_SendEvent and RASRST for taskmanager hot-key support.
                o Enabled callgate on SMP kernel.

 2001-02-22: Sander van Leeuwen <sandervl@xs4all.nl>